src/objects/Loan_Management_Event__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loan_Management_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Amount__c</fullName>
        <label>Event Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Loan_Term__c</fullName>
        <label>Event Loan Term</label>
        <picklist>
            <picklistValues>
                <fullName>01 (30 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 (090 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 (120 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 (150 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 (180 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 (210 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 (240 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 (270 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 (365 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Process_Method__c</fullName>
        <label>Event Process Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bounce Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Change Collection Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Payment Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Collection Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waive Accummulated Fees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Allocation__c</fullName>
        <label>Interest Allocation</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Loan</label>
        <referenceTo>Operation__c</referenceTo>
        <relationshipLabel>Loan Management Events</relationshipLabel>
        <relationshipName>Loan_Management_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principal_Allocation__c</fullName>
        <label>Principal Allocation</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Related_Event_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Event Id</label>
        <referenceTo>Loan_Management_Event__c</referenceTo>
        <relationshipLabel>Loan Management Events</relationshipLabel>
        <relationshipName>Loan_Management_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Waive_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive Fee</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Management Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Management Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>